Updated sonar file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.exclusions=node_modules/**, coverage/**, public/**, build/**, **/__tests__/**
 sonar.tests=src/test
-sonar.test.inclusions=**/*.test.js
+sonar.test.inclusions=**/*.test.js,**/*.test.ts,
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=sonar-report.xml
