--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./src/app.ts",
-    "test": "jest ./src/test",
+    "test": "jest --config=jest.config.js",
+    "test:cov": "jest --config=jest.config.js --coverage",
     "build": "npx tsc",
     "sonar": "sonar-scanner"
   },
@@ -23,6 +24,35 @@
     "http-server": "^14.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "nodemon": "^3.1.4",
+    "jest": "^29.7.0",
+    "sonarqube-scanner": "^4.0.1",
+    "ts-jest": "^29.2.3"
+  },
+   "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  },
+  "jestSonar": {
+    "reportPath": ".",
+    "reportFile": "sonar-report.xml",
+    "indent": 4
   }
 }
 
