--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "ts-jest": "^29.2.4",
     "http-server": "^14.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "jest-sonar-reporter": "^2.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "nodemon": "^3.1.4",
     "jest": "^29.7.0",
     "sonarqube-scanner": "^4.0.1",
-    "ts-jest": "^29.2.3"
+    "ts-jest": "^29.2.3",
+    "jest-sonar-reporter": "^2.0.0"
   },
    "jest": {
     "moduleFileExtensions": [
